# llm-agent-python

./: AGENT.md  README.md  chat_history.json  main.py  pyproject.toml
llm_providers/: __init__.py  anthropic_provider.py  openai_provider.py
plugins/: __init__.py  base.py  file_tools.py
tests/: conftest.py  test_main.py
tests/llm_providers/: test_anthropic_provider.py  test_openai_provider.py
tests/plugins/: test_base.py  test_file_tools.py
