[project]
name = "llm-agent-python"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "anthropic>=0.51.0",
    "openai>=1.0.0",
    "ollama>=0.1.0",
    "click>=8.1.7",
]

[dependency-groups]
dev = [
    "black>=25.1.0",
    "mypy>=1.15.0",
    "pytest>=7.4.0",
    "pytest-mock>=3.11.1",
]
